# egos-self

./: .gitignore  .windsurfrules  AGENTS.md  LICENSE  README.md  ROADMAP.md  TASKS.md  pyproject.toml
.guarani/: IDENTITY.md  PREFERENCES.md
.guarani/orchestration/: DOMAIN_RULES.md  GATES.md  PIPELINE.md  QUESTION_BANK.md
.guarani/refinery/: classifier.md
.guarani/refinery/interrogators/: bug.md  feature.md  knowledge.md  refactor.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/egos/self/: EgosSelfApp.kt
android/app/src/main/java/org/egos/self/protocol/: ConnectionService.kt  DeviceConnection.kt  DeviceDiscovery.kt  KdeConnectProtocol.kt  WebSocketRelay.kt
android/app/src/main/java/org/egos/self/ui/: MainActivity.kt  MainViewModel.kt
android/app/src/main/java/org/egos/self/ui/theme/: Theme.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
docs/: COMPETITIVE_ANALYSIS.md  GIT_LAYER_ARCHITECTURE.md
src/egos_self/: __init__.py  cli.py  config.py  git_layer.py  relay.py  transport.py
