[project]
name = "egos-self"
version = "0.1.0"
description = "Universal CLI for human-AI-device communication"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Enio Rocha", email = "enioxt@gmail.com" }]

dependencies = [
    "click>=8.1",
    "dbus-next>=0.2.3",
    "rich>=13.0",
]

[project.optional-dependencies]
ai = ["litellm>=1.0", "ollama>=0.3"]

[project.scripts]
egos = "egos_self.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
